# team-3m

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  .trivyignore.yaml  AGENTS.md  AGENTS.override.md  README.md  docker-compose.azure.yml  docker-compose.yml  install-skills.sh  renovate.json  skills-lock.json
.claude/agents/: java-build-resolver.md  typescript-reviewer.md
.claude/skills/: local_address-pr-comments  local_conventional-commit  local_open-pr
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: pre-commit
.github/workflows/: ai-quality.yml  bootstrap-environment.yml  bootstrap-environments.yml  ci-cd.yml  client-ci.yml  client-quality.yml  deploy-azure.yml  deploy.yml  docker-build-push.yml  helm-quality.yml  openapi-sync.yml  pr.yml  server-lint.yml  server-quality.yml  teardown-azure.yml
ai/: .dockerignore  Dockerfile  pyproject.toml
ai/advisor/: main.py
ai/src/ai/: health.py
ai/tests/: test_health.py
client/: .env.example  Dockerfile  biome.json  docker-entrypoint.sh  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
core/: .dockerignore  Dockerfile  build.gradle
core/docs/: openapi.yml
deliverables/: PROBLEM_STATEMENT.md
deliverables/models/: ANALYSIS_OBJECT_MODEL.json  COMPONENT_DIAGRAM.json  USE_CASE_DIAGRAM.json
resources/: BEST_PRACTICES_KUBERNETES.md  BEST_PRACTICES_MICROSERVICES.md  PROJECT_DETAILS.md  PROJECT_GRADING.md
(+225 files in other folders)
