[project]
name = "kontor-ai"
version = "0.12.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.49",
    "pydantic>=2.13",
]

[dependency-groups]
ci = [
    "httpx>=0.28",
    "pytest>=9",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "ty>=0.0.46",
]
dev = [
    {include-group = "ci"},
]

[build-system]
requires = ["uv_build>=0.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "advisor"
module-root = ""

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
